Fix logo not showing up on some emails

--- a/backend/emails/layout/layout.css
+++ b/backend/emails/layout/layout.css
@@ -60,6 +60,7 @@ a {
 .table {
   width: 100%;
   border-spacing: 0;
+  overflow: auto;
 }
 
 .tr {
